changes all over
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@195 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -21,26 +21,11 @@ same weak dependence of the kinematics of the event on width
 variation, except in few corner cases. In addition, it was found that
 the same benchmark parameters of the $t\bar t$ case could be chosen.
 
-In this particular model we recommend an additional care when choosing
-the flavor scheme generation. 
-It is found that the best modeling of two $b$-quarks final states is
-achieved using a 4-flavor scheme and a massive treatment of the
-$b$-quarks \Todo{Add reference}.
-% We recommend to use in the generation NNPDF3.0 set (lhaid
-%263400).
-In addition, we recommend to calculate the cross sections of these
-models in the 5-flavour scheme, and as in the $t bar t$ case we provide 
-values for the suggested coupling scan in the appendix. 
-The PDF used to calculate these cross section is NNPDF3.0 (lhaid 263000). 
+\newthought{Implementation}
+There are some subtleties to the Monte Carlo simulation relevant for
+this case that are discussed in Appendix~\ref{app:MonojetLikeModels_Appendix}.
 
-\Todo{The following figures are placeholders for now and will be added once ready}.
-
-\begin{figure}
-  \vbox{\hfill}
-  \caption{Comparison of the subleading jet $p_T$ and $b$-jet multiplicity
-    for $bb$+DM scalar model generated in the 4-flavour (left) and 5-flavour (right)
-    schemes, respectively}
-\end{figure}
+\Todo{[TODO: The following figures are placeholders for now and will be added later].  If these are supporting material for the MC generation, put in the appendix}.
 
 \begin{figure}
     \vbox{\hfill}
