--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -40,7 +40,7 @@ On the other hand, large $\Lambda$
 implies large $g$, raising the question if perturbation theory
 is even applicable.     
 
-Here we summarise some methods that can be used to ensure the validity of the EFT approximation. These methods are described in detail in Refs.~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}. We then propose a recommendation for the presentation of EFT results for Run-2 LHC benchmarks.
+Here we summarize some methods that can be used to ensure the validity of the EFT approximation. These methods are described in detail in Refs.~\cite{Busoni:2013lha,Busoni:2014sya,Busoni:2014haa,Aad:2015zva,Racco:2015dxa}. We then propose a recommendation for the presentation of EFT results for Run-2 LHC benchmarks.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{\texorpdfstring{Outline of the procedure described in Refs.~\cite{Busoni:2014sya,Aad:2015zva}}{Outline of the procedure described in Refs.}}
@@ -90,7 +90,7 @@ If a search is not simply a counting experiment and exploits the shapes of kinem
 In \cite{Racco:2015dxa} a procedure to extract model independent and consistent bounds within the EFT is described. This procedure can be applied to any effective Lagrangian describing the interactions between the DM and the SM, and provides limits that can be directly reinterpreted in any completion of the EFT.
 
 The range of applicability of the EFT is defined by a mass scale $M_\text{cut}$, a parameter which marks the upper limit of the range of energy scales at which the EFT can be used reliably, independently of the particular completion of the model. 
-Regardless of the  details of the full theory, the energy scale probing the validity of the EFT is less than or equal to the centre-of-mass energy $E_\text{cm}$, 
+Regardless of the  details of the full theory, the energy scale probing the validity of the EFT is less than or equal to the center-of-mass energy $E_\text{cm}$, 
 the total invariant mass of the hard final states of the reaction.
 To be specific, consider the basic monojet process with kinematics
 $p_1 + p_2 \to k + p_{\bar\chi\chi}$.   $k$ is the momentum of the outgoing jet, whereas $p_{\bar\chi\chi}$ is the momentum of the $\bar\chi\chi$ pair and
@@ -191,7 +191,7 @@ exclusion limits for the chosen acceptance.
 We propose a rough scan over \MCut, such that we find the values of \MCut 
 for which R ranges from 0.1 to 1. The analysis can then perform a scan over 
 several values of \MCut \Todo{agree on how many?}, and show the truncated limit 
-for each one of them alongside the naive limit corresponding to R=0. 
+for each one of them alongside the naive limit corresponding to R=1. 
 
 %When R=0, there is no limit. When R reaches 1, the truncated limit 
 %is identical to the original limit. (<== These last two sentences may be overkill. 
