--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -60,7 +60,7 @@ broad assumptions and focused on benchmarks for kinematically-distinct
 signals which are most urgently needed. As far as time and resources
 have allowed, the assumptions have been carefully motivated by
 theoretical consensus and comparisons of simulation. But to achieve a
-true consenus with only a few months before Run 2 would begin, it was
+true consensus with only a few months before Run 2 would begin, it was
 important to narrow the scope and timescale to the following:
 
 \begin{enumerate}
@@ -76,7 +76,7 @@ important to narrow the scope and timescale to the following:
   with when comparing results from the two collaborations.
 \item The forum could also discuss the conditions under which the EFT
   interpretation may still be desirable.
-\item The forum should prepare a report summarising these items,
+\item The forum should prepare a report summarizing these items,
   suitable both as a reference for the internal ATLAS and CMS
   audiences and as an explanation for theory and non-collider
   readers. This report represents the views of the participants of the
@@ -102,12 +102,12 @@ distinguish the spin of the DM particle.
 
 We also assume that Minimal Flavor Violation (MFV) applies to the
 recommended models. This means that the flavor structure of the
-couplings between dark matter and ordinary particles follosw thame
+couplings between dark matter and ordinary particles follows the
 structure as the Standard Model. This choice is both natural, as there
 is no required additional theory of flavor beyond what is already
 present in the SM, and and it provides a mechanism to ensure that the
 models do not violate flavor constraints.  As a consequence, spin-0
-resonances exchanged in the s-channel must have Yukawa coupings to SM
+resonances exchanged in the s-channel must have Yukawa couplings to SM
 fermions. Flavor-safe models can still be constructed beyond the MFV
 assumption~\cite{Agrawal:2014aoa}, but their phenomenology is left for
 future studies.
