--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -1,4 +1,4 @@
-\section{Implementation of s-channel models}
+
 
 There are several matrix element implementations of the
 DM production through spin-0 and spin-1 mediators.
@@ -74,7 +74,7 @@ In this test we are generating the process with up to two parton emissions, so t
 \item \texttt{p p > chi chi~ j}
 \item \texttt{p p > chi chi~ j j}
 \end{itemize}
-Two matching scales are tested at 30 and 80 GeV. The differential jet rates are shown in Fig. \ref{fig:CKKW_D5_30} for matching scale 30 GeV and Fig. \ref{fig:CKKW_D5_80} for 80 GeV. The 80 GeV matching scale gives smoother distribution, which is desired to avoid artifical effect due to parton matching. There will be a small tink around the matching scale for both cases.
+Two matching scales are tested at 30 and 80 GeV. The differential jet rates are shown in Fig. \ref{fig:CKKW_D5_30} for matching scale 30 GeV and Fig. \ref{fig:CKKW_D5_80} for 80 GeV. The 80 GeV matching scale gives smoother distribution, which is desired to avoid artificial effect due to parton matching. There will be a small kink around the matching scale for both cases.
 
 \begin{figure}[h!]
 	\centering  
@@ -93,7 +93,7 @@ Two matching scales are tested at 30 and 80 GeV. The differential jet rates are 
 	\subfloat[$4\rightarrow5$ parton process]{%
 		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet4to5_30.pdf}
 	}
-	\caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 30 GeV. 0-, 1- and 2-parton emission cases are generated separatedly. A vertical line is drawn at the matching scale.}
+	\caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 30 GeV. 0-, 1- and 2-parton emission cases are generated separately. A vertical line is drawn at the matching scale.}
 	\label{fig:CKKW_D5_30}
 \end{figure}
 
@@ -115,7 +115,7 @@ Two matching scales are tested at 30 and 80 GeV. The differential jet rates are 
 	\subfloat[$4\rightarrow5$ parton process]{%
     \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/HistoJet4to5_80.pdf}
 	}
-  \caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly. A vertical line is drawn at the matching scale.}
+  \caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separately. A vertical line is drawn at the matching scale.}
   \label{fig:CKKW_D5_80}
 \end{figure}
 
@@ -142,7 +142,7 @@ To compare the effect in a finer step, the matching scales at 30, 50, 70, 80 and
 		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/compare_plot_4.pdf}
 		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/window_plot_4.pdf}
 	}
-  \caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 30, 50, 70, 80 and 90 GeV. 0-, 1- and 2-parton emission cases are generated separatedly and the total merged contribution is shown. A closer look is shown around the matching scale.}
+  \caption{Jet differential rates distributions for EFT D5 sample with CKKW matching scale at 30, 50, 70, 80 and 90 GeV. 0-, 1- and 2-parton emission cases are generated separately and the total merged contribution is shown. A closer look is shown around the matching scale.}
   \label{fig:CKKW_D5_zoom}
 \end{figure}
 
@@ -162,8 +162,8 @@ The MC distributions for the missing transverse energy and transverse momenta fo
 %	\subfloat[Transverse momentum of subleading jet]{%
 %    \includegraphics[width=0.48\linewidth]{figures/monojet_appendix/jet2pt_matching80.pdf}
 %	}
-%	\caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
-	\caption{Missing transverse momentum distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separatedly and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
+%	\caption{Kinematics distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separately and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
+	\caption{Missing transverse momentum distributions for EFT D5 sample with CKKW matching scale at 80 GeV. 0-, 1- and 2-parton emission cases are generated separately and added together by cross sections. The 0-parton emission case has very limited contribution for missing transverse energy larger than 300 GeV region.}
 	\label{fig:Kine_D5_80}
 \end{figure}
 
@@ -213,7 +213,7 @@ Here the 0-, 1-, 2- and 3-parton emissions are generated separately and requeste
 	\label{fig:RatioKine_D5_2}
 \end{figure}
 
-With the ATLAS run-I baseline cut (MET and leading jet $p_{T}$ larger than 250 GeV, less than 4 jets), the 0+1 parton emission has 17.4\% yield less compared to 0+1+2+3 parton emission, while the 0+1+2 has 2.2\% less. With MET$>$400 GeV, 0+1 parton emission has 16.8\% yield less and 0+1+2 parton emission has 2.4\% less compared to 0+1+2+3 parton emission. With MET$>$600 GeV, 0+1 parton emission has 16.5\% yield less and 0+1+2 parton emission has 2.9\% less compared to 0+1+2+3 parton emission. The same numbers hold if a sysmetric cut is added on leading jet transverse momentum.
+With the ATLAS run-I baseline cut (MET and leading jet $p_{T}$ larger than 250 GeV, less than 4 jets), the 0+1 parton emission has 17.4\% yield less compared to 0+1+2+3 parton emission, while the 0+1+2 has 2.2\% less. With MET$>$400 GeV, 0+1 parton emission has 16.8\% yield less and 0+1+2 parton emission has 2.4\% less compared to 0+1+2+3 parton emission. With MET$>$600 GeV, 0+1 parton emission has 16.5\% yield less and 0+1+2 parton emission has 2.9\% less compared to 0+1+2+3 parton emission. The same numbers hold if a symmetric cut is added on leading jet transverse momentum.
 
 
 \section{Model implementation for mono-Higgs models}
@@ -260,4 +260,69 @@ The other masses are unchanged and do not affect the result.
  different with model parameters. We recommend to generate them separately, 
  and then add the two signal processes together weighted by cross sections.
  % These signals should be generated separately since they have different $\tan \beta, M_A$ dependence.  
- 
+
+
+\section{Heavy Flavor Models} 
+In this particular model we recommend an additional care when choosing
+the flavor scheme generation. 
+It is found that the best modeling of two $b$-quarks final states is
+achieved using a 4-flavor scheme and a massive treatment of the
+$b$-quarks \Todo{[TODO: Add reference]}.
+% We recommend to use in the generation NNPDF3.0 set (lhaid
+%263400).
+In addition, we recommend to calculate the cross sections of these
+models in the 5-flavor scheme, and as in the $t bar t$ case we provide 
+values for the suggested coupling scan in the appendix. 
+The PDF used to calculate these cross section is NNPDF3.0 (lhaid 263000). 
+
+\Todo{[TODO: The following figures are placeholders for now and will be added later]}.
+
+\begin{figure}
+  \vbox{\hfill}
+  \caption{Comparison of the subleading jet $p_T$ and $b$-jet multiplicity
+    for $bb$+DM scalar model generated in the 4-flavor (left) and 5-flavor (right)
+    schemes, respectively}
+\end{figure}
+
+\section{Single Top Models}
+
+Card files for MadGraph are provided on the Forum SVN repository~\cite{ForumSVN_EWMonoTop}, 
+corresponding to the Lagrangian from~\cite{AndreaFuksMaltoni}. 
+Each coupling constant of this model can be set via the parameter card and 
+the blocks which are relevant for the two models used for the experimental searches are described below.
+The relevant parameters in the MadGraph parameter cards, also expressed in the notation introduced in the 
+previous Section, are as follows for the two models considered.
+
+\begin{enumerate}
+
+\item Resonant scalar model described by the Lagrangian~\eqref{eq:lagrangianResonant}
+  \begin{itemize}
+  \item \texttt{AQS} and \texttt{BQS}: $3\times 3$ matrices (flavour space) fixing the coupling of the scalar $\phi$ ($S$ stands for scalar) and $down$-type quarks ($Q$ stands for quarks), previously called $a^q/b^q_{SR}$.
+  \item \texttt{A12S} and \texttt{B12S}: $3\times 1$ matrices (flavor space) fixing the coupling of the new fermion $\chi$ (where $12$ stands for spin-$1/2$ fermion) and $up$-type quarks, previously called $a^{1/2}_{VR}$.
+  \end{itemize}  
+  
+\item Non-resonant vectorial model described by the Lagrangian~\eqref{eq:lagrangianNonResonantVector}
+\begin{itemize}
+\item \texttt{A1FC} and \texttt{B1FC}: $3\times 3$ matrices (flavor space) fixing the coupling of the vector $V$ ($1$ stands for vector) and $up$-type quarks, previously called $a^1_{FC}$. 
+\item particle name: the dark matter candidate $\chi$ is not implemented %(as this model assumes $\BR{V}{\chi\chi}=100\%$)
+\end{itemize}
+
+\end{enumerate}
+
+The width of the scalar resonance and of the new vector are set to all allowed decays in the ATLAS implementation,
+while the only allowed decay in the CMS implementation to the new fermion and a top quark for the resonant model. 
+\Todo{Continue discussion between ATLAS and CMS to reach an agreement, or include instructions to compare results.}
+
+\section{EFT Mono-Higgs implementation}
+
+These models are generated at leading
+order with MadGraph 2.2.2, using Pythia8 for the parton shower. No matching is performed. 
+Parameter cards can be found on the Forum SVN repository:~\cite{ForumSVN_EWMonoHiggs} for operators with Higgs+MET final states
+and ~\cite{ForumSVN_EWEFTD7} for $W/Z/\gamma$ final states.
+
+\section{Simplified Models of Mono-Higgs}
+
+These models are generated at leading
+order with MadGraph 2.2.2, using Pythia8 for the parton shower. No matching is performed. 
+Parameter cards can be found on the Forum SVN 
+repository~\cite{ForumSVN_EWMonoHiggs_2HDM, ForumSVN_EWMonoHiggs}.
