--- a/doc/tex/Presentation_Of_Experimental_Results.tex
+++ b/doc/tex/Presentation_Of_Experimental_Results.tex
@@ -15,11 +15,11 @@
 
 Along with the design of new searches to hunt for new physics at the LHC, it is important to consider information needed in order to reinterpret the searches outside of the collaborations. The following is a non-exhaustive list of recommendations in order to make reinterpretation easier and faster. This appendix details considerations for reimplementation of the analysis as well as for using the simplified model results directly given by the collaborations. 
 
-One of the important developments in recent years is an active development of the analyses recasting codes~\cite{Dumont:2014tja, Conte:2014zja, Kim:2015wza}. The aim of these codes is to provide a public library of reimplemented and validated LHC analyses. Such libraries can then be used to analyse validity of a BSM scenario in a systematic and effective manner. The availability of public libraries further facilitates a unified framework and can lead to an organised and central structure to preserve LHC information in a long run. 
+One of the important developments in recent years is an active development of the analyses recasting codes~\cite{Dumont:2014tja, Conte:2014zja, Kim:2015wza}. The aim of these codes is to provide a public library of reimplemented and validated LHC analyses. Such libraries can then be used to analyze validity of a BSM scenario in a systematic and effective manner. The availability of public libraries further facilitates a unified framework and can lead to an organized and central structure to preserve LHC information in a long run. 
 
 In order to be able to develop such codes, it is important to get complete and systematic information from the collaborations. 
 \begin{itemize}
-	\item	\textbf{Data digitisation}: Availability of digitised data is one of the primary requirement. All information given by collaborations in the form of plots should be made available in a digitised format. Platforms such as HepData can be used in oder to maintain a centralised manner. In case when HepData can not be used, digitised data can be provided via analyses twiki pages. This information primarily includes expected and observed exclusion lines along with their $\pm 1 \sigma$ uncertainty, expected and observed upper limits in case of simplified models, efficiency maps and all kinematic distributions as reported in the analysis. Units should be clearly specified. If the digitised figures are made available as a C macro or a ROOT file, the names of the objects should be clearly identifiable e.g. expected upper limits of a particular topology/model given  as a ROOT file can be labeled as \texttt{KEY: TH2D	ExpectedUpperLimit;1}. Furthermore, these digitised files can potentially contain more information (larger axes ranges) than displayed on the plot. This will help facilitate understand what happens beyond the limits displayed in the plot, e.g. a distribution for number of jets can be artificially limited to a point in the plot (for the purpose of clarity of figure) , however, this artificial limit leads to a sharp cutoff in the plot. While validating the analysis it is often necessary to compare the distributions beyond such artificial limits, having this information digitised will be of a great help in such cases. 
+	\item	\textbf{Data digitization}: Availability of digitized data is one of the primary requirement. All information given by collaborations in the form of plots should be made available in a digitized format. Platforms such as HepData can be used in oder to maintain a centralised manner. In case when HepData can not be used, digitised data can be provided via analyses twiki pages. This information primarily includes expected and observed exclusion lines along with their $\pm 1 \sigma$ uncertainty, expected and observed upper limits in case of simplified models, efficiency maps and all kinematic distributions as reported in the analysis. Units should be clearly specified. If the digitised figures are made available as a C macro or a ROOT file, the names of the objects should be clearly identifiable e.g. expected upper limits of a particular topology/model given  as a ROOT file can be labeled as \texttt{KEY: TH2D	ExpectedUpperLimit;1}. Furthermore, these digitised files can potentially contain more information (larger axes ranges) than displayed on the plot. This will help facilitate understand what happens beyond the limits displayed in the plot, e.g. a distribution for number of jets can be artificially limited to a point in the plot (for the purpose of clarity of figure) , however, this artificial limit leads to a sharp cutoff in the plot. While validating the analysis it is often necessary to compare the distributions beyond such artificial limits, having this information digitised will be of a great help in such cases. 
 \end{itemize}
 
 \section{Reimplementing analyses}
