--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -58,7 +58,9 @@ The minimal width of each mediator is expressed, using the example of decay to a
 \begin{equation}
 \begin{split}
 \Gamma (\phi_i \rightarrow \bar{u}_i \chi) &= \frac{g_i^2}{16 \pi M_{\phi_i}^3}(M_{\phi_i}^2 - m_{u_i}^2 - m_{\chi}^2) 		\\
-					   & \times \sqrt{M_{\phi_i}^4 + m_{u_i}^4 + m_{\chi}^4 - 2M_{\phi_i}^2m_{u_i}^2 - 2M_{\phi_i}^2m_{\chi}^2 - 2m_{u_i}^2m_{\chi}^2} \, ,
+					   & \times
+%\sqrt{M_{\phi_i}^4 + m_{u_i}^4 + m_{\chi}^4 - 2M_{\phi_i}^2m_{u_i}^2 - 2M_{\phi_i}^2m_{\chi}^2 - 2m_{u_i}^2m_{\chi}^2} \, ,
+\sqrt{(M_{\phi_i}^2 - (m_{u_i} + m_{\chi})^2)(M_{\phi_i}^2 - (m_{u_i}-m_{\chi})^2)} \, ,
 \end{split}
 \end{equation}
 which reduces to 
