--- a/doc/tex/TTBar_Xsecs_Appendix.tex
+++ b/doc/tex/TTBar_Xsecs_Appendix.tex
@@ -136,7 +136,7 @@ Figure~\ref{fig:relic_weights} shows the weights obtained for various dark matte
 		\hline
 	\end{tabular}
 	\caption{Dark matter masses $m_{\chi}$ and mediator masses $m_{\Phi}$ generated such that relic density constraints are fullfilled for 13 TeV. The resulting
-		production cross sections are given in pb.\label{tab:g_relic_13T}}
+		production cross sections are given in pb.\label{tab:g_relic_13T_b}}
 \end{table}
 
 
