--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -218,6 +218,11 @@
 %\fi
 
 \chapter{Recommended models for all MET+X analyses}
+This chapter of the report is dedicated to simplified
+models that produced, primarily, monojet signatures.
+Details of the implementation of these models in
+Monte Carlo generators is provided in
+Appendix \ref{app:MonojetLikeModels_Appendix}.
 \label{subsec:MonojetLikeModels}
 \input{tex/MonojetLikeModels}
 
