--- a/doc/tex/EWSpecificModels_SVMediators.tex
+++ b/doc/tex/EWSpecificModels_SVMediators.tex
@@ -33,7 +33,7 @@ still worth comparing with searches in the jet+MET final state.
 
 \subsection{Vector mediator exchanged in the s-channel}
 
-An example Feynman diagam for these processes can be constructed by taking
+An example Feynman diagram for these processes can be constructed by taking
 Fig.~\ref{fig:OP} and replacing the gluon with $\gamma,W$ or $Z$.
 The interest for searches with W bosons in the final state
 has been elevated by the increased cross section
@@ -91,6 +91,7 @@ comparing a width that is set to $\Gamma=M_{med}/3$ to the
 minimal width (the ratio between the two widths
 ranges from 1.05 to 1.5 with increasing mediator masses).
 
+%% Redone as a table.
 % mmed : minW
 % 10  : 3.5
 % 50 : 21.3
@@ -100,13 +101,32 @@ ranges from 1.05 to 1.5 with increasing mediator masses).
 % 1000 : 503
 % 3000 : 1512
 % 6000 : 3024
-
-\begin{figure}
-    \includegraphics[width=0.7\textwidth]{figures/EW/acceptance_minwidth_vs_mo3_gamma}
+\begin{table}[!h]
+\begin{tabular}{| l |r r r r|}\hline
+\multicolumn{5}{|c|}{Acceptance ratio for $\Gamma=\Gamma_{\rm min}$ vs
+$\Gamma=\mMed/3$} \\ \hline 
+\multicolumn{1}{|c|}{ } & \multicolumn{4}{c|}{\mdm/GeV}\\
+\hline 
+{\mMed/GeV}      & 10     & 50    & 200   & 400  \\ \hline
+50   & 0.96   & 0.99  &       & 0.95 \\  
+100  & 0.97   &       &       &      \\
+300  & 1.00   & 1.02  &       &      \\
+600  &        &       & 0.96  &      \\
+1000 & 1.01   & 1.02  & 1.03  &      \\
+3000 & 1.02   & 1.03  &       & 1.01 \\
+\hline
+\end{tabular}
     \caption{Analysis acceptance for the photon+MET analysis when varying the mediator width, in the
     case of a vector mediator exchanged in the $s-$channel}%This plot will come from Marie-Helene
     \label{fig:DMV_EW_gamma_acceptance}
-\end{figure}
+\end{table}
+
+%% \begin{figure}
+%%     \includegraphics[width=0.7\textwidth]{figures/EW/acceptance_minwidth_vs_mo3_gamma}
+%%     \caption{Analysis acceptance for the photon+MET analysis when varying the mediator width, in the
+%%     case of a vector mediator exchanged in the $s-$channel}%This plot will come from Marie-Helene
+%%     \label{fig:DMV_EW_gamma_acceptance}
+%% \end{figure}
 
 Examples of relevant kinematic distributions for selected benchmark points are
 shown in Fig.~\ref{fig:DMV_EW_kinematics_SVMed}. 
@@ -114,37 +134,40 @@ leading-order cross-sections for the chosen
 benchmark points are shown in Appendix~\ref{app:EWSpecificModels_Appendix}.
 
 \begin{figure}[h!]
-	\centering  
-	\subfloat[Missing transverse momentum distribution for the photon+MET final state, for 
-	different mediator mass choices, for a DM mass of 10 GeV.\label{fig:DMV_EW_gamma_MET_SVMed}]{%
-		\includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
-	}%TODO: add this + equivalent plot of MET to appendix
-	\hfill
-	\subfloat[Leading photon transverse momentum distribution for the photon+MET final state, 
-	for different DM mass choices, with a mediator mass of 1 TeV.\label{fig:DMV_EW_gamma_pT_SVMed}]{%
+\centering  
+\subfloat[Missing transverse momentum distribution for the photon+MET final state, for 
+different mediator mass choices, for \mdm=10 GeV.\label{fig:DMV_EW_gamma_MET_SVMed}]{%
+\includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_dm10GeV}
+}%TODO: add this + equivalent plot of MET to appendix
+\hfill
+\subfloat[Leading photon transverse momentum distribution for the photon+MET final state, 
+for different DM mass choices, with \mMed=1 TeV.\label{fig:DMV_EW_gamma_pT_SVMed}]{%
 		\includegraphics[width=0.45\textwidth]{figures/EW/ptGamma_filter120GeV_dmV_mV1000GeV}
-	}%TODO: add equivalent plot of MET to appendix
-	\hfill
-	\subfloat[Missing transverse momentum distribution for the leptonic Z+MET final state, 
-	for different mediator mass choices, for a DM mass of 15 GeV\label{fig:DMV_EW_Z_MET_SVMed}]{%
-		\includegraphics[width=0.7\textwidth]{figures/EW/pt_vv_Mx15}
-	}    
-	\hfill
-	\subfloat[Missing transverse momentum distribution for the hadronic W+MET final state.\label{fig:DMV_EW_Whad_MET_SVMed}]{%
-		\includegraphics[width=0.7\textwidth]{figures/EW/monoWhad_Destructive/metPt}
-	}    
-	\caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
-		for the simplified model with a vector mediator exchanged in the $s-$channel.}
-	\label{fig:DMV_EW_kinematics_SVMed}
+}%TODO: add equivalent plot of MET to appendix
+\hfill
+\subfloat[Missing transverse momentum distribution for the leptonic Z+MET final state, 
+for different mediator mass choices, for \mdm=15 GeV\label{fig:DMV_EW_Z_MET_SVMed}]{%
+\includegraphics[width=0.45\textwidth]{figures/EW/pt_vv_Mx15}
+}    
+\hfill
+\subfloat[Missing transverse momentum distribution for the hadronic W+MET final state.\label{fig:DMV_EW_Whad_MET_SVMed}]{%
+	\includegraphics[width=0.5\textwidth]{figures/EW/monoWhad_Destructive/metPt}
+}    
+\caption{Kinematic distributions relevant for searches with W, Z and photons in the final state, 
+for the simplified model
+       with a vector mediator exchanged in the $s-$channel.}
+\label{fig:DMV_EW_kinematics_SVMed}
 \end{figure}
 
 \subsection{Scalar mediator exchanged in the s-channel}
 \label{sub:EW_Scalar}
 
+\Todo{Feynman diagram?}
+
 We recommend to generate this model for W, Z and photon searches 
 in order to reproduce the kinematics of the dimension-5 contact operator
 described in Section~\ref{sub:EW_EFT_Dim5} in a simplified model framework.
-Results can then be recasted at the reinterpretation stage, by rescaling the cross-sections.  
+Results can then be recast at the reinterpretation stage, by rescaling the cross-sections.  
 The scan in \mdm and \mMed should follow the one in Table~\ref{fig:DMV_EW_gamma_acceptance}, 
 although individual analyses may choose to reduce the granularity of the scan
 according to their expected sensitivity. 
@@ -166,19 +189,19 @@ The acceptance for a series of simplified analysis cuts
 applied at the generator level is shown in Figure~\ref{fig:TChan_EW_Zhad_acc}. 
 
 \begin{figure}[h!]
-	\centering  
-	\includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/metPt}
-	\caption{Missing transverse momentum distribution for the hadronic Z+MET final state,
-		for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
-	\label{fig:TChan_EW_Zhad_MET}
+\centering  
+\includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/metPt}
+\caption{Missing transverse momentum distribution for the hadronic Z+MET final state,
+for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
+\label{fig:TChan_EW_Zhad_MET}
 \end{figure}
 
 \begin{figure}[h!]
-	\centering  
-	\includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/acc}
-	\caption{Acceptance table for the hadronic Z+MET final state,
-		for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
-	\label{fig:TChan_EW_Zhad_acc}
+\centering  
+\includegraphics[width=0.8\textwidth]{figures/EW/monoZhad_TChannel/acc}
+\caption{Acceptance table for the hadronic Z+MET final state,
+for the simplified model with a colored scalar mediator exchanged in the $t-$channel.}
+\label{fig:TChan_EW_Zhad_acc}
 \end{figure}
 
 The parameter scan for the $t-$ channel model is still under discussion~\Todo{The parameter scan, 
